--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Goyemon/DeriOne#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^3.3.0",
     "truffle": "^5.1.55"
   }
 }
