--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Goyemon/DeriOne#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^3.3.0",
+    "@truffle/hdwallet-provider": "^1.2.0",
     "truffle": "^5.1.55"
   }
 }
